# mujoco_hinge_chain

./: .gitignore  ANALYSIS_SUMMARY.txt  CRITICAL_GAPS_IN_RUST_IMPLEMENTATION.md  DYNAMICS_ANALYSIS_SUMMARY.txt  IMPLEMENTATION_GAPS_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  KINEMATICS_ANALYSIS_INDEX.md  MUJOCO_ANALYSIS_INDEX.md  MUJOCO_CODE_DETAILS.md  MUJOCO_DYNAMICS_ANALYSIS.md  MUJOCO_DYNAMICS_DETAILED.md  MUJOCO_KINEMATICS_CODE_REFERENCE.md  MUJOCO_KINEMATICS_STABILITY.md  QUICK_REFERENCE.md  README.md  README_分析总结.md  hinge_chain.xml  physics.md  pyproject.toml  simulate_hinge_chain.py
hinge_chain/: CODE_STRUCTURE.md  Cargo.toml  README.md
hinge_chain/src/: main.rs
hinge_chain/src/demos/: hinge_chain.rs  mod.rs
hinge_chain/src/multibody/: dynamics.rs  geometry.rs  integrator.rs  kinematics.rs  mod.rs  model.rs  spatial_algebra.rs  subtree_com.rs  velocity.rs
